# serializer version: 1
# name: test_binary_sensors[binary_sensor.test_league_leading_matchup-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.test_league_leading_matchup',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Leading matchup',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Leading matchup',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'matchup_leading',
    'unique_id': '123456789_1397743357073084416_matchup_leading',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.test_league_leading_matchup-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test League Leading matchup',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.test_league_leading_matchup',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_binary_sensors[binary_sensor.wombats_league_leading_matchup-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'binary_sensor',
    'entity_category': None,
    'entity_id': 'binary_sensor.wombats_league_leading_matchup',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Leading matchup',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Leading matchup',
    'platform': 'sleeper',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'matchup_leading',
    'unique_id': '123456789_1392910061486997504_matchup_leading',
    'unit_of_measurement': None,
  })
# ---
# name: test_binary_sensors[binary_sensor.wombats_league_leading_matchup-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wombats League Leading matchup',
      'margin': 35.76,
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.wombats_league_leading_matchup',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
